# ai-replay

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: cicd.yml  format-check.yml
demos/claude-11b02037-1306-4e15-b456-94e75ecee12f/: index.html
demos/claude-37ed2e27-175b-4a55-a6de-6fb3418059d4/: index.html
docs/: demo-redaction.html  demo-session.jsonl  demo.html  index.html
scripts/: build-template.mjs  build-website.mjs
scripts/shims/: empty.mjs
src/: browser.mjs  editor-server.mjs  parser.mjs  renderer.mjs
src/ai_replay/: __init__.py  discover.py  extract.py  parser.py  renderer.py  resolve_session.py  secrets.py  themes.py
src/ai_replay/templates/: player.html
template/: editor.html  player.html
test/: AGENT-SMOKE-TEST.md  test-cli.mjs  test-editor-server.mjs  test-parser.mjs  test-renderer.mjs  test-validate-format.mjs  validate-format.mjs
test/e2e/: editor.spec.mjs  fixture.jsonl  player.spec.mjs  setup.mjs
tests/: test_discover.py  test_smoke.py
