[project]
name = "ai-replay"
version = "0.2.1"
description = "Convert Claude Code, Cursor, and Codex CLI session transcripts to interactive HTML replays"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "click",
    "click-default-group",
    "questionary",
]

[project.scripts]
ai-replay = "ai_replay:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=7.0",
]
